# ColorPdfSpliter

./: .gitignore  ColorPdfSpliter.py  ColorPdfSpliterWeb.py  README.md  README_EN.md  app.js  cli.py  compile.ps1  index.html  initialize.bat  input.css  jit.ps1  md5verify.ps1  package-lock.json  package.json  pymupdf-console.html  pyproject.toml  run-duplex.bat  run.bat  tailwind.config.js  ui.js  worker.js
.github/workflows/: deploy.yml  web-deploy.yml
src/color_pdf_spliter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: app.js  compile.ps1  compile.sh  package-lock.json  package.json  preview.sh  worker.js
